--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">avance_proyecto1</string>
+    <string name="app_name">App_Gym</string>
     <string name="mi_edad_es">Mi Edad Es:</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="title_activity_navigation">NavigationActivity</string>
