--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="mensaje">*Antes de comenzar cualquier programa o dieta para bajar de peso consulta a tu médico. Esta aplicación y sus servicios están pensados para ser utilizados solo por adultos sanos y no por menores de edad, mujeres embarazadas o que padezcan cualquier problema de salud. Se advierte especialmente a estas personas que busquen asesoramiento medico profesional antes de iniciar cualquier plan o dieta para bajar de peso.</string>
 </resources>
